<resources>
    <string name="app_name">熏蒸实时监测</string>
    <string name="gs_name_en">Linyi Certification &amp; Inspection Co., Ltd.</string>
    <string name="gs_name_cn">中检集团临沂检验认证有限公司</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">登陆(注册)</string>
    <string name="action_sign_in_short">登陆</string>
    <string name="error_invalid_email">邮件地址输入有误</string>
    <string name="error_invalid_password">密码太短</string>
    <string name="error_incorrect_password">密码输入错误</string>
    <string name="error_field_required">此项必须填写</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="rcl">热处理</string>
    <string name="rcl_gqwd">干球温度</string>
    <string name="rcl_sqwd">湿球温度</string>
    <string name="rcl_hjwd">环境温度</string>
    <string name="rcl_mxwd">木芯温度</string>
    <string name="rcl_xdsd">相对湿度</string>

    <string name="wd">℃</string>
    <string name="sd">RH%</string>
    <string name="qtnd">PPM</string>

    <string name="time_start">处理开始时间</string>
    <string name="time_end">处理结束时间</string>
    <string name="time_ymd">年月日</string>

    <string name="xzs">熏蒸室</string>
    <string name="xzs_qtnd">气体浓度</string>
    <string name="xzs_wd">温度</string>
    <string name="xzs_sd">湿度</string>
    <string name="title_activity_settings">Settings</string>

    <string name="jc_address_tag">监测地点</string>
    <string name="jc_address_name">临沂市第一熏蒸监测室</string>

    <string name="jc_time">监测时间</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings_fragment">设置</string>

    <!-- Strings related to login
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>-->
</resources>
