<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.damontung.xunzhengjc.SettingFragment"
    android:background="@drawable/background">

    <!-- TODO: Update blank fragment layout -->

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|top"

        android:padding="8dp"
        android:layout_margin="8dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="热处理"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp"
            android:gravity="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000">

        </View>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="开启/关闭热处理"
            android:id="@+id/switch1"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:layout_marginTop="8dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bcd2ee"
            android:layout_marginTop="6dp"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="开启/关闭热处理报警"
            android:id="@+id/switch2"
            android:checked="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bcd2ee"
            android:layout_marginTop="6dp"/>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="数据采集间隔"
                android:id="@+id/textView2"
                android:layout_alignParentLeft="true"/>

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="144dp"
                android:layout_height="8dp"
                android:id="@+id/progressBar"
                android:layout_gravity="right"
                android:max="100"
                android:progress="50"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:indeterminate="false"
                android:layout_alignParentEnd="true"
                android:background="#4ec44c"
                android:clickable="true"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bcd2ee"
            android:layout_marginTop="6dp"/>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="通讯端口"
                android:id="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="6dp"/>

            <TextView
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:id="@+id/set_port"
                android:text="8080"
                android:layout_alignParentRight="true"
                android:layout_marginTop="6dp"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bcd2ee"
            android:layout_marginTop="6dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="温度报警阈值"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="6dp"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/wd"
                android:layout_alignParentRight="true"
                android:id="@+id/setting_tv_wdyz_tag"
                android:gravity="right"
                android:layout_marginTop="6dp"/>
            <TextView
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/setting_tv_wdyz_tag"
                android:id="@+id/setting_tv_wdyz"
                android:text="30"
                android:layout_marginTop="6dp"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bcd2ee"
            android:layout_marginTop="6dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="湿度报警阈值"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/sd"
                android:layout_alignParentRight="true"
                android:id="@+id/setting_tv_sdyz_tag"
                android:gravity="right"/>
            <TextView
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/setting_tv_sdyz_tag"
                android:id="@+id/setting_tv_sdyz"
                android:text="80"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:layout_margin="16dp"
        android:layout_weight="1"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="熏蒸室"
            android:id="@+id/setting_xzs"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp"
            android:gravity="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000">

        </View>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="开启/关闭熏蒸室监测"
            android:id="@+id/xzs_switch1"
            android:layout_gravity="center_horizontal"
            android:checked="false"
            android:layout_marginTop="8dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bcd2ee"
            android:layout_marginTop="6dp"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="开启/关闭熏蒸室报警"
            android:id="@+id/xzs_switch2"
            android:checked="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bcd2ee"
            android:layout_marginTop="6dp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="温度报警阈值"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/wd"
                android:layout_alignParentRight="true"
                android:id="@+id/setting_xzs_wdyz_tag"
                android:gravity="right"/>
            <TextView
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/setting_xzs_wdyz_tag"
                android:id="@+id/setting_xzs_wdyz"
                android:text="30"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bcd2ee"
            android:layout_marginTop="6dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="湿度报警阈值"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/sd"
                android:layout_alignParentRight="true"
                android:id="@+id/setting_xzs_sdyz_tag"
                android:gravity="right"/>
            <TextView
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/setting_xzs_sdyz_tag"
                android:id="@+id/setting_xzs_sdyz"
                android:text="80"/>
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#bcd2ee"
            android:layout_marginTop="6dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="气体浓度报警阈值"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/qtnd"
                android:layout_alignParentRight="true"
                android:id="@+id/setting_xzs_qtnd_tag"
                android:gravity="right"/>
            <TextView
                android:layout_width="56dp"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/setting_xzs_qtnd_tag"
                android:id="@+id/setting_xzs_qtnd"
                android:text="80"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
</FrameLayout>
